fix jaxb spring hibernate mysql